--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -26,7 +26,7 @@ imgkit==1.2.3
 install==1.3.5
 jmespath==0.10.0
 pillow==10.2.0
-pkg_resources==0.0.0
+# pkg_resources==0.0.0
 psycopg==3.1.8
 pyasn1==0.6.0
 pycparser==2.22
